--- a/scenes/ajout_note.fxml
+++ b/scenes/ajout_note.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -43,7 +42,6 @@
                     <rowConstraints>
                       <RowConstraints maxHeight="179.0" minHeight="10.0" prefHeight="85.0" vgrow="SOMETIMES" />
                       <RowConstraints maxHeight="286.0" minHeight="10.0" prefHeight="267.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="286.0" minHeight="10.0" prefHeight="94.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <GridPane>
@@ -67,35 +65,17 @@
                               <TextField fx:id="coefficientField" layoutX="147.0" layoutY="40.0" GridPane.columnIndex="3" />
                            </children>
                         </GridPane>
-                        <TableView fx:id="tableNewGrades" editable="true" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                        <TableView fx:id="tableNewGrades" editable="true" prefHeight="290.0" prefWidth="630.0" GridPane.rowIndex="1">
                           <columns>
                             <TableColumn fx:id="nameColumn" prefWidth="218.0" text="Nom" />
                             <TableColumn fx:id="surnameColumn" prefWidth="202.0" text="Prénom" />
+                              <TableColumn fx:id="idColumn" onEditCommit="#onEditGrade" prefWidth="219.0" text="Identifiant" />
                               <TableColumn fx:id="gradeColumn" onEditCommit="#onEditGrade" prefWidth="219.0" text="Note" />
                           </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                            </columnResizePolicy>
                         </TableView>
-                        <GridPane GridPane.rowIndex="2">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="176.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="126.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="103.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="268.0" minWidth="10.0" prefWidth="119.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="119.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <TextField fx:id="nameStudentField" text="Nom" />
-                              <TextField fx:id="surnameStudentField" text="Prénom" GridPane.columnIndex="1" />
-                              <TextField fx:id="gradeStudentField" text="Note" GridPane.columnIndex="2" />
-                              <Button fx:id="addGradeButton" mnemonicParsing="false" onAction="#addGrade" prefHeight="44.0" prefWidth="108.0" text="Ajouter" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                              <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteGrade" prefHeight="44.0" prefWidth="108.0" text="Supprimer" GridPane.columnIndex="4" />
-                           </children>
-                        </GridPane>
                      </children>
                   </GridPane>
                </children>
